# Project_2_Job_search

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: all_vacancies.json  new_vac.json  sorted_vacancies.json  stop_words.json  vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_api_py.html  z_145eef247bfb46b6_base_files_py.html  z_145eef247bfb46b6_working_with_api_py.html  z_145eef247bfb46b6_working_with_files_py.html  z_145eef247bfb46b6_working_with_vacancies_py.html
src/: base_api.py  base_files.py  interaction_with_api.py  interaction_with_vacancies.py  working_with_api.py  working_with_file.py  working_with_files.py  working_with_vacancies.py
tests/: test_work_api.py  test_work_files.py  test_work_vacancies.py
